adding fonts, defining variables filing, and creating basic styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Your Business Name</title>
+        <!-- Bootstrap Icons -->
+        <link rel="stylesheet" href="./src/css/bootstrap-icons.css">
+        <!-- CSS File -->
+        <link rel="stylesheet" href="./src/css/styles.css">
     </head>
 
     <body>
