creation and styling of the navbar - part 1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html dir="ltr" lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,5 +12,34 @@
     </head>
 
     <body>
+        <header class="header">
+            <nav class="nav container">
+                <a class="nav__logo" href="#">Your Business Name</a>
+
+                <div class="nav__menu">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Home</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">About us</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Services</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#">Contact us</a>
+                        </li>
+                        <i class="bi bi-toggle-off"></i>
+                    </ul>
+                </div>
+
+                <div class="nav__toggle">
+                    <i class="bi bi-list-nested"></i>
+                </div>
+
+                <a class="button button__header" href="#">Lorem, ipsum.</a>
+            </nav>
+        </header>
     </body>
 </html>
