--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <body>
         <header class="header">
             <nav class="nav container">
-                <a class="nav__logo" href="#">Your Business Name</a>
+                <a class="nav__logo" href="#">Business Name</a>
 
-                <div class="nav__menu">
+                <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a class="nav__link" href="#">Home</a>
@@ -30,16 +30,19 @@
                         <li class="nav__item">
                             <a class="nav__link" href="#">Contact us</a>
                         </li>
-                        <i class="bi bi-toggle-off"></i>
+                        <!-- <i class="bi bi-toggle-off"></i> -->
                     </ul>
                 </div>
 
-                <div class="nav__toggle">
+                <div class="nav__toggle" id="nav-toggle">
                     <i class="bi bi-list-nested"></i>
                 </div>
 
                 <a class="button button__header" href="#">Lorem, ipsum.</a>
             </nav>
         </header>
+
+        <script src="./node_modules/jquery/dist/jquery.js"></script>
+        <script src="./src/js/app.js"></script>
     </body>
 </html>
