--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
             </nav>
         </header>
 
+        <section class="home section">
+            <div class="home__container container">
+                <article class="svg__img home__img">
+                    <img src="./src/images/1.svg" alt="home-image">
+                </article>
+
+                <article class="home__info">
+                    <h1 class="home__title">
+                        Lorem ipsum dolor sit. <br>
+                        <span>Lorem ipsum</span>
+                    </h1>
+                    <p class="home__description">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius eveniet doloremque non sit reiciendis magni illo nesciunt numquam.
+                    </p>
+                    <a href="#" class="button">Lorem, ipsum.</a>
+                </article>
+            </div>
+        </section>
+
         <script src="./node_modules/jquery/dist/jquery.js"></script>
         <script src="./src/js/app.js"></script>
     </body>
