--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
             </div>
         </section>
 
+        <section class="about section">
+            <div class="about__container container">
+                <article class="about__info">
+                    <h1 class="section__title">
+                        Lorem ipsum dolor sit. <br>
+                        <span>About us</span>
+                    </h1>
+                    <p class="about__description">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius eveniet doloremque non sit reiciendis magni illo nesciunt numquam.
+                    </p>
+                </article>
+
+                <article class="svg__img about__img">
+                    <img src="./src/images/2.svg" alt="about-image">
+                </article>
+            </div>
+        </section>
+
         <script src="./node_modules/jquery/dist/jquery.js"></script>
         <script src="./src/js/app.js"></script>
     </body>
