creation and styling of the navbar - part 4

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     </head>
 
     <body>
-        <header class="header">
+        <header class="header" id="header">
             <nav class="nav container">
                 <a class="nav__logo" href="#">Business Name</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a class="nav__link" href="#">Home</a>
+                            <a class="nav__link" href="#home">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#">About us</a>
+                            <a class="nav__link" href="#about">About us</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#">Services</a>
+                            <a class="nav__link" href="#services">Services</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#">Contact us</a>
+                            <a class="nav__link" href="#contact">Contact us</a>
                         </li>
                         <!-- <i class="bi bi-toggle-off"></i> -->
                     </ul>
@@ -42,7 +42,7 @@
             </nav>
         </header>
 
-        <section class="home section">
+        <section class="home section" id="home">
             <div class="home__container container">
                 <article class="svg__img home__img">
                     <img src="./src/images/1.svg" alt="home-image">
@@ -51,7 +51,7 @@
                 <article class="home__info">
                     <h1 class="home__title">
                         Lorem ipsum dolor sit. <br>
-                        <span>Lorem ipsum</span>
+                        <span>Home</span>
                     </h1>
                     <p class="home__description">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius eveniet doloremque non sit reiciendis magni illo nesciunt numquam.
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <section class="about section">
+        <section class="about section" id="about">
             <div class="about__container container">
                 <article class="about__info">
                     <h1 class="section__title">
