--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <a class="nav__link" href="#about">About us</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#services">Services</a>
+                            <a class="nav__link" href="#support">support</a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#contact">Contact us</a>
@@ -75,6 +75,24 @@
 
                 <article class="svg__img about__img">
                     <img src="./src/images/2.svg" alt="about-image">
+                </article>
+            </div>
+        </section>
+
+        <section class="support section" id="support">
+            <div class="support__container container">
+                <article class="support__info">
+                    <h1 class="section__title">
+                        Lorem ipsum dolor sit. <br>
+                        <span>Support</span>
+                    </h1>
+                    <p class="support__description">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius eveniet doloremque non sit reiciendis magni illo nesciunt numquam.
+                    </p>
+                </article>
+
+                <article class="svg__img support__img">
+                    <img src="./src/images/3.svg" alt="support-image">
                 </article>
             </div>
         </section>
