creation and styling of the services section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                             <a class="nav__link" href="#about">About us</a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" href="#support">support</a>
+                            <a class="nav__link" href="#support">Support</a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link" href="#services">Services</a>
                         </li>
                         <li class="nav__item">
                             <a class="nav__link" href="#contact">Contact us</a>
@@ -93,6 +96,40 @@
 
                 <article class="svg__img support__img">
                     <img src="./src/images/3.svg" alt="support-image">
+                </article>
+            </div>
+        </section>
+
+        <section class="services section" id="services">
+            <h1 class="section__title section__title-center">
+                Lorem ipsum dolor sit. <br>
+                <span>Services</span>
+            </h1>
+
+            <div class="services__container container">
+                <article class="services__info">
+                    <h3 class="services__title">Lorem ipsum</h3>
+                    <i class="services__icon bi bi-browser-chrome"></i>
+                    <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus iure neque sed sint, quo consequuntur omnis eius tenetur?</p>
+                    <div>
+                        <a class="button button-link" href="#">see more</a>
+                    </div>
+                </article>
+                <article class="services__info">
+                    <h3 class="services__title">Lorem ipsum</h3>
+                    <i class="services__icon bi bi-browser-edge"></i>
+                    <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus iure neque sed sint, quo consequuntur omnis eius tenetur?</p>
+                    <div>
+                        <a class="button button-link" href="#">see more</a>
+                    </div>
+                </article>
+                <article class="services__info">
+                    <h3 class="services__title">Lorem ipsum</h3>
+                    <i class="services__icon bi bi-browser-firefox"></i>
+                    <p class="services__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus iure neque sed sint, quo consequuntur omnis eius tenetur?</p>
+                    <div>
+                        <a class="button button-link" href="#">see more</a>
+                    </div>
                 </article>
             </div>
         </section>
