--- a/index.html
+++ b/index.html
@@ -134,6 +134,32 @@
             </div>
         </section>
 
+        <section class="app section" id="app">
+            <div class="app__container container">
+                <article class="app__info">
+                    <h2 class="section__title">
+                        Lorem ipsum dolor sit amet <br>
+                        <span>Applications</span>
+                    </h2>
+                    <p class="app__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repudiandae ullam esse voluptate dignissimos ipsum iste, quia ea nulla eaque!</p>
+                    <div class="app__buttons">
+                        <a class="button button-flex" href="#">
+                            <i class="bi bi-apple"></i>
+                            App Store
+                        </a>
+                        <a class="button button-flex" href="#">
+                            <i class="bi bi-google-play"></i>
+                            Google Play
+                        </a>
+                    </div>
+                </article>
+
+                <article class="svg__img app__img">
+                    <img src="./src/images/4.svg" alt="app-image">
+                </article>
+            </div>
+        </section>
+
         <script src="./node_modules/jquery/dist/jquery.js"></script>
         <script src="./src/js/app.js"></script>
     </body>
