creation and styling of the contact section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         Lorem ipsum dolor sit amet <br>
                         <span>Applications</span>
                     </h2>
-                    <p class="app__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repudiandae ullam esse voluptate dignissimos ipsum iste, quia ea nulla eaque!</p>
+                    <p class="app__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quasi ipsam ea perferendis nam eos corrupti, odio quis.</p>
                     <div class="app__buttons">
                         <a class="button button-flex" href="#">
                             <i class="bi bi-apple"></i>
@@ -157,6 +157,44 @@
                 <article class="svg__img app__img">
                     <img src="./src/images/4.svg" alt="app-image">
                 </article>
+            </div>
+        </section>
+
+        <section class="contact section" id="contact">
+            <div class="contact__container container">
+                <div>
+                    <article">
+                        <h2 class="contact__title section__title">Contact</h2>
+                        <p class="contact__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus iure unde sed quasi ea a ipsam laudantium placeat.</p>
+                    </article>
+                </div>
+
+                <div>
+                    <article>
+                        <ul class="contact__info">
+                            <li class="contact__address">
+                                Phone:
+                                <span class="contact__information">+1 - 000 - 0000000</span>
+                            </li>
+                            <li class="contact__address">
+                                Email:
+                                <span class="contact__information">example@email.com</span>
+                            </li>
+                            <li class="contact__address">
+                                Address:
+                                <span class="contact__information">Lorem ipsum dolor sit amet consectetur.</span>
+                            </li>
+                        </ul>
+                    </article>
+                </div>
+
+                <div>
+                    <article>
+                        <div class="contact__button">
+                            <a class="button button-contact" href="#">Contact us</a>
+                        </div>
+                    </article>
+                </div>
             </div>
         </section>
 
