--- a/index.html
+++ b/index.html
@@ -198,6 +198,64 @@
             </div>
         </section>
 
+        <section class="wave" id="wave">
+            <svg class="wave__svg" viewBox="0 0 1440 217" xmlns="http://www.w3.org/2000/svg"><path d="M 0,400 L 0,150 C 61.561538461538476,189.33076923076922 123.12307692307695,228.66153846153844 212,206 C 300.87692307692305,183.33846153846156 417.0692307692308,98.68461538461537 499,105 C 580.9307692307692,111.31538461538463 628.6,208.6 709,213 C 789.4,217.4 902.530769230769,128.91538461538462 997,93 C 1091.469230769231,57.08461538461538 1167.2769230769231,73.73846153846154 1238,92 C 1308.7230769230769,110.26153846153846 1374.3615384615384,130.13076923076923 1440,150 L 1440,400 L 0,400 Z"></path></svg>
+        </section>
+
+        <footer class="footer section">
+            <div class="footer__container container">
+                <article class="footer__content">
+                    <a href="#" class="footer__logo">Business Name</a>
+                    <p class="footer__description">Lorem ipsum dolor sit.</p>
+                </article>
+
+                <article class="footer__content">
+                    <h3 class="footer__title">Lorem ipsum</h3>
+                    <ul class="footer__links">
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                    </ul>
+                </article>
+
+                <article class="footer__content">
+                    <h3 class="footer__title">Lorem ipsum</h3>
+                    <ul class="footer__links">
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                    </ul>
+                </article>
+
+                <article class="footer__content">
+                    <h3 class="footer__title">Lorem ipsum</h3>
+                    <ul class="footer__links">
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                        <li><a href="#" class="footer__link">Lorem ipsum</a></li>
+                    </ul>
+                </article>
+
+                <article class="footer__social">
+                    <a href="#" class="footer__social-link">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                    <a href="#" class="footer__social-link">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a href="#" class="footer__social-link">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                    <a href="#" class="footer__social-link">
+                        <i class="bi bi-whatsapp"></i>
+                    </a>
+                </article>
+            </div>
+
+            <p class="footer__copy">&#169; All Right Reserved.</p>
+        </footer>
+
         <script src="./node_modules/jquery/dist/jquery.js"></script>
         <script src="./src/js/app.js"></script>
     </body>
