creation and styling of the scroll up button

--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
             <p class="footer__copy">&#169; All Right Reserved.</p>
         </footer>
 
+        <a class="scrollup" id="scroll-up" href="#home">
+            <i class="scrollup__icon bi bi-arrow-up"></i>
+        </a>
+
         <script src="./node_modules/jquery/dist/jquery.js"></script>
         <script src="./src/js/app.js"></script>
     </body>
