creation and styling of the dark theme mode

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Your Business Name</title>
-        <!-- Bootstrap Icons -->
-        <link rel="stylesheet" href="./src/css/bootstrap-icons.css">
-        <!-- CSS File -->
         <link rel="stylesheet" href="./src/css/styles.css">
     </head>
 
@@ -33,7 +30,7 @@
                         <li class="nav__item">
                             <a class="nav__link" href="#contact">Contact us</a>
                         </li>
-                        <!-- <i class="bi bi-toggle-off"></i> -->
+                        <i class="change-theme bi bi-toggle-off" id="theme-button"></i>
                     </ul>
                 </div>
 
