--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a class="nav__logo" href="#">
-                    <img src="dist/images/logo.png" class="nav__logo-img">
+                    <img src="src/images/logo.png" class="nav__logo-img">
                     <span>Domy Marzeń</span>
                 </a>
                 <div class="nav__menu" id="nav-menu">
@@ -162,7 +162,7 @@
             <div class="footer__container container">
                 <article class="footer__content">
                     <a href="#" class="footer__logo">
-                        <img src="dist/images/logo.png" alt="Domy Marzeń logo" class="nav__logo-img">
+                        <img src="src/images/logo.png" alt="Domy Marzeń logo" class="nav__logo-img">
                         Domy Marzeń
                     </a>
                     <p class="footer__description">Tworzymy miejsca, które pokochasz.</p>
